--- a/locales/kn.json
+++ b/locales/kn.json
@@ -121,5 +121,7 @@
 	"total hours contributed": "total hours contributed",
 	"Validate More": "Validate More",
 	"Validating Instructions": "Validating Instructions",
-	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗೆ ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇಲ್ಲ, ಅದಕ್ಕಾಗಿ ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?"
+	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗೆ ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇಲ್ಲ, ಅದಕ್ಕಾಗಿ ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
+	"EkStep Foundation": "ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಸಂಸ್ಥೆ",
+	"Username cannot be more than 12 characters": "ಬಳಕೆದಾರನ ಹೆಸರು 12 ಅಕ್ಷರಗಳಿಗಿಂತ ಹೆಚ್ಚು ಇರಬಾರದು"
 }
