--- a/locales/ml.json
+++ b/locales/ml.json
@@ -124,5 +124,10 @@
 	"would you like to contribute for it?": "അതിനായി സംഭാവന നൽകാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
 	"Enter preferred username": "ഇഷ്ടമുള്ള യൂസർനെയിം നൽകുക",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "<span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> ഭാഷയിൽ സംഭാവന ചെയ്യപ്പെട്ട <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> ശബ്ദ സാമ്പിളുകളിൽ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> ശബ്ദ സാമ്പിളുകൾ സാധൂകരിക്കാൻ നിങ്ങൾ ഞങ്ങളെ സഹായിച്ചിരിക്കുന്നു.",
-	"We do not have any data for this language, would you like to contribute for it?": "ഈ ഭാഷയ്‌ക്കായി ഞങ്ങൾക്ക് ഡാറ്റയൊന്നുമില്ല, അതിനായി സംഭാവന നൽകാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?"
+	"We do not have any data for this language, would you like to contribute for it?": "ഈ ഭാഷയ്‌ക്കായി ഞങ്ങൾക്ക് ഡാറ്റയൊന്നുമില്ല, അതിനായി സംഭാവന നൽകാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"Username cannot be more than 12 characters": "യൂസർനെയിമിൽ 12 പ്രതീകങ്ങളിൽ കൂടുതൽ പാടില്ല",
+	"EkStep Foundation": "ഏക്സ്റ്റെപ്പ് ഫൗണ്ടേഷൻ"
 }
