| Raunak | kannada and assamese translations

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -57,9 +57,9 @@
 	"ABOUT THE ORGANISATION": "ಸಂಸ್ಥೆಯ ಕುರಿತು",
 	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಸಂಸ್ಥೆಯು ಪಾಲುದಾರರನ್ನು ಒಟ್ಟುಗೂಡಿಸುತ್ತದೆ ಮತ್ತು ಸಂಕೀರ್ಣ ಸಾಮಾಜಿಕ ಸಮಸ್ಯೆಗಳನ್ನು ಮಾನದಂಡದಲ್ಲಿ ಪರಿಹರಿಸಲು ಮುಕ್ತ ಮೂಲಸೌಕರ್ಯ, ಪರಿಕರಗಳು ಮತ್ತು ಚೌಕಟ್ಟುಗಳನ್ನು ರಚಿಸುತ್ತದೆ. ಅನುಕೂಲಕರ ಮುಕ್ತ ಮೂಲ ಡಿಜಿಟಲ್ ಮೂಲಸೌಕರ್ಯವನ್ನು ನಾವು ಸನ್‌ಬರ್ಡ್ ಎಂದು ರಚಿಸಿದ್ದೇವೆ ಮತ್ತು ಯೋಚಿಸುವ ವಿಧಾನವನ್ನು ಅನುಸರಿಸುವ ಮೂಲಕ ಮತ್ತು ಸಾಮಾಜಿಕ ವೇದಿಕೆ ಪ್ರಸ್ತಾಪನೆಯ ಮೂಲಕ ನಾವು ಇದನ್ನು ಮಾಡುತ್ತೇವೆ.",
 	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ರೋಹಿಣಿ ಮತ್ತು ನಂದನ್ ನಿಲೆಕಾನಿ ಮತ್ತು ಶಂಕರ್ ಮರುವಾಡ ರವರು ಸ್ಥಾಪಿಸಿದ ಅತ್ಯಾಧುನಿಕ ಸಂಸ್ಥೆಯಾಗಿದೆ.",
-	"Male": "Male",
-	"Female": "Female",
-	"Others": "Others",
+	"Male": "ಪುರುಷ",
+	"Female": "ಹೆಣ್ಣು",
+	"Others": "ಇತರರು",
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voice speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.": "ಭಾಷಣ ಮನ್ನಣೆಯು \"ಯಂತ್ರ-ಕಲಿಕೆ\" ತಂತ್ರಜ್ಞಾನವನ್ನು ಅವಲಂಬಿಸಿದೆ, ಅದು ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳು ಮತ್ತು ಅನುಗುಣವಾದ ಪಠ್ಯವನ್ನು ಒಳಗೊಂಡಿರುವ ಮಾಹಿತಿಸಂಗ್ರಾಹಕಗಳ ಬೃಹತ್ ಸಂಗ್ರಹದ ಅಗತ್ಯವಿದೆ. ವಾಕ್ಯಾಂಶ್ ಮೂಲಕ, ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಭಾರತೀಯ ಭಾಷೆಯನ್ನು ಮಾತನಾಡುವ ಭಾರತೀಯ ಧ್ವನಿಗಳ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಮೂಲ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ಬಯಸಿದೆ, ಇದನ್ನು ಈ ಕಾರ್ಯತತ್ಪರತೆ ಮತ್ತು ಅನ್ಯ ಉದ್ದೇಶಗಳಿಗೆ ಬಳಸಬಹುದು.",
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
@@ -71,18 +71,18 @@
 	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
 	"RE-RECORD": "RE-RECORD",
 	"NEXT": "NEXT",
-	"away from reaching your goal!": "away from reaching your goal!",
+	"away from reaching your goal!": "ನಿಮ್ಮ ಗುರಿಯನ್ನು ತಲುಪುವುದರಿಂದ ದೂರದಲ್ಲಿದ್ದಿರಿ!",
 	"Error!!!": "Error!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
 	"Close": "Close",
-	"Thank you for contributing!": "Thank you for contributing!",
-	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!",
+	"Thank you for contributing!": "ಕೊಡುಗೆ ನೀಡಿದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
+	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "ನಿಮ್ಮ ಕೊಡುಗೆ ನಮ್ಮ ಗುರಿಯ ಸಮೀಪ <b><span id=\"user-contribution\">ಸೆಕೆಂಡುಗಳನ್ನು</span></b> ತಲುಪಿದೆ!!!",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
-	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.",
-	"We know you can do more!": "We know you can do more!",
-	"Contribute More": "Contribute More",
-	"Share it with your friends and family": "Share it with your friends and family",
-	"Come Back again to<br />hit your goalpost": "Come Back again to<br />hit your goalpost",
+	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "ನಿಮ್ಮ ಧ್ವನಿಯ 30-45 ನಿಮಿಷಗಳ ಕೊಡುಗೆ ವಾಕ್ಯಾಂಶ್ ವೈವಿಧ್ಯಮಯ ಧ್ವನಿಗಳ ಮುಕ್ತ ಮಾಹಿತಿ ಭಂಡಾರವನ್ನು ನಿರ್ಮಿಸುವಂತೆ ಮಾಡುತ್ತದೆ.",
+	"We know you can do more!": "ನೀವು ಮತ್ತಷ್ಟು ಮಾಡಬಹುದು ಎಂಬುದು ನಮಗೆ ತಿಳಿದಿದೆ!",
+	"Contribute More": "ಮತ್ತಷ್ಟು ಕೊಡುಗೆ ನೀಡಿ",
+	"Share it with your friends and family": "ಇದನ್ನು ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಕುಟುಂಬದವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಿ",
+	"Come Back again to<br />hit your goalpost": "ನಿಮ್ಮ ಗುರಿಯ ಸ್ಥಾನವನ್ನು<br />ಮುಟ್ಟಲು ಮತ್ತೆ ಹಿಂತಿರುಗಿ",
 	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
 	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
 	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
@@ -115,13 +115,17 @@
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ನಾವು ಇತ್ತೀಚೆಗೆ <span id=\"spn-validation-language\"></span> ಭಾಷೆಗಾಗಿ ಡೇಟಾ ಕೊಡುಗೆ ಪ್ರಯಾಣವನ್ನು ಪ್ರಾರಂಭಿಸಿದ್ದೇವೆ ಮತ್ತು ಶೀಘ್ರದಲ್ಲೇ ನಿಮ್ಮ ation ರ್ಜಿತಗೊಳಿಸುವಿಕೆಗಾಗಿ ಧ್ವನಿ ಮಾದರಿಗಳನ್ನು ಸಂಗ್ರಹಿಸಲಾಗುವುದು ಎಂದು ಭಾವಿಸುತ್ತೇವೆ.",
 	"Would you also like to contribute your voice?": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಸಹ ನೀವು ನೀಡಲು ಬಯಸುವಿರಾ?",
 	"Start Contributing": "ಕೊಡುಗೆ ನೀಡಲು ಪ್ರಾರಂಭಿಸಿ",
-	"Thank you for validating!": "Thank you for validating!",
+	"Thank you for validating!": "ಮೌಲ್ಯೀಕರಿಸಿದ್ದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.",
 	"total hours validated": "total hours validated",
 	"total hours contributed": "total hours contributed",
-	"Validate More": "Validate More",
+	"Validate More": "ಮತ್ತಷ್ಟು ಮೌಲ್ಯೀಕರಿಸಿ",
 	"Validating Instructions": "Validating Instructions",
 	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗೆ ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇಲ್ಲ, ಅದಕ್ಕಾಗಿ ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
 	"EkStep Foundation": "ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಸಂಸ್ಥೆ",
-	"Username cannot be more than 12 characters": "ಬಳಕೆದಾರನ ಹೆಸರು 12 ಅಕ್ಷರಗಳಿಗಿಂತ ಹೆಚ್ಚು ಇರಬಾರದು"
+	"Username cannot be more than 12 characters": "ಬಳಕೆದಾರನ ಹೆಸರು 12 ಅಕ್ಷರಗಳಿಗಿಂತ ಹೆಚ್ಚು ಇರಬಾರದು",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ರೆಕಾರ್ಡಿಂಗ್‌ಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ನೀವು ನಮಗೆ ಸಹಾಯ ಮಾಡಿದ್ದೀ",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample"
 }
