--- a/locales/te.json
+++ b/locales/te.json
@@ -4,7 +4,7 @@
 	"Bengali": "বাংলা",
 	"English": "English",
 	"Gujurati": "ગુજરાતી",
-	"Hindi": "हिन्दी",
+	"Hindi": "हिंदी",
 	"Kannada": "ಕನ್ನಡ",
 	"Malayalam": "മലയാളം",
 	"Marathi": "मराठी",
