| Raunak | Kannada translations, dashboard speaker details modal and chart length changes

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -63,18 +63,18 @@
 	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voice speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.": "ಭಾಷಣ ಮನ್ನಣೆಯು \"ಯಂತ್ರ-ಕಲಿಕೆ\" ತಂತ್ರಜ್ಞಾನವನ್ನು ಅವಲಂಬಿಸಿದೆ, ಅದು ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳು ಮತ್ತು ಅನುಗುಣವಾದ ಪಠ್ಯವನ್ನು ಒಳಗೊಂಡಿರುವ ಮಾಹಿತಿಸಂಗ್ರಾಹಕಗಳ ಬೃಹತ್ ಸಂಗ್ರಹದ ಅಗತ್ಯವಿದೆ. ವಾಕ್ಯಾಂಶ್ ಮೂಲಕ, ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಭಾರತೀಯ ಭಾಷೆಯನ್ನು ಮಾತನಾಡುವ ಭಾರತೀಯ ಧ್ವನಿಗಳ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಮೂಲ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ಬಯಸಿದೆ, ಇದನ್ನು ಈ ಕಾರ್ಯತತ್ಪರತೆ ಮತ್ತು ಅನ್ಯ ಉದ್ದೇಶಗಳಿಗೆ ಬಳಸಬಹುದು.",
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
-	"Recording Instructions": "Recording Instructions",
-	"START": "START",
-	"Let's get started!": "Let's get started!",
-	"SKIP": "SKIP",
-	"STOP RECORDING": "STOP RECORDING",
-	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
-	"RE-RECORD": "RE-RECORD",
-	"NEXT": "NEXT",
+	"Recording Instructions": "ರೆಕಾರ್ಡಿಂಗ್ ಸೂಚನೆಗಳು",
+	"START": "ಪ್ರಾರಂಭಿಸಿ",
+	"Let's get started!": "ನಾವೀಗ ಆರಂಭಿಸೋಣ!",
+	"SKIP": "ತ್ಯಜಿಸಿ",
+	"STOP RECORDING": "ರೆಕಾರ್ಡಿಂಗ್ ನಿಲ್ಲಿಸಿ",
+	"Audio recording is too small. Please Re-record": "ಆಡಿಯೋ ರೆಕಾರ್ಡಿಂಗ್ ತುಂಬಾ ಸಣ್ಣ ಪ್ರಮಾಣದಾಗಿದೆ. ದಯವಿಟ್ಟು ಮರು-ರೆಕಾರ್ಡ್ ಮಾಡಿ",
+	"RE-RECORD": "ಮರು-ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡಿ",
+	"NEXT": "ಮುಂದೆ",
 	"away from reaching your goal!": "ನಿಮ್ಮ ಗುರಿಯನ್ನು ತಲುಪುವುದರಿಂದ ದೂರದಲ್ಲಿದ್ದಿರಿ!",
-	"Error!!!": "Error!!!",
-	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
-	"Close": "Close",
+	"Error!!!": "ದೋಷ!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪ್ರಕ್ರಿಯೆಗೊಳಿಸುವಾಗ ಅನಿರೀಕ್ಷಿತ ದೋಷ ಸಂಭವಿಸಿದೆ. ದಯವಿಟ್ಟು ಸ್ವಲ್ಪ ಸಮಯದ ನಂತರ ಪ್ರಯತ್ನಿ",
+	"Close": "ಮರೆಮಾಡಿ",
 	"Thank you for contributing!": "ಕೊಡುಗೆ ನೀಡಿದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
 	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "ನಿಮ್ಮ ಕೊಡುಗೆ ನಮ್ಮ ಗುರಿಯ ಸಮೀಪ <b><span id=\"user-contribution\">ಸೆಕೆಂಡುಗಳನ್ನು</span></b> ತಲುಪಿದೆ!!!",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
@@ -83,20 +83,20 @@
 	"Contribute More": "ಮತ್ತಷ್ಟು ಕೊಡುಗೆ ನೀಡಿ",
 	"Share it with your friends and family": "ಇದನ್ನು ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಕುಟುಂಬದವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಿ",
 	"Come Back again to<br />hit your goalpost": "ನಿಮ್ಮ ಗುರಿಯ ಸ್ಥಾನವನ್ನು<br />ಮುಟ್ಟಲು ಮತ್ತೆ ಹಿಂತಿರುಗಿ",
-	"Please test your <b>microphone</b>": "Please test your <b>microphone</b>",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
-	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
-	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>",
-	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
+	"Please test your <b>microphone</b>": "ದಯವಿಟ್ಟು ನಿಮ್ಮ <b>ಮೈಕ್ರೊಫೋನ್</b> ಅನ್ನು ಪರೀಕ್ಷಿಸಿ",
+	"Please test your <b>speakers</b>": "ದಯವಿಟ್ಟು ನಿಮ್ಮ <b>ಸ್ಪೀಕರ್‌ಗಳನ್ನು</b> ಪರೀಕ್ಷಿಸಿ",
+	"Ensure there is <b>no background noise</b>": "ಹಿನ್ನೆಲೆ ಶಬ್ದವಿಲ್ಲ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "ರೆಕಾರ್ಡ್ ಮಾಡುವ ಮೊದಲು, ಗಟ್ಟಿಯಾಗಿ ಓದುವ ಮೂಲಕ ಪ್ರಚೋದಿಸಿದ ಪಠ್ಯದೊಂದಿಗೆ ಆರಾಮಧಾಯಕವಾಗಿರಿ",
+	"Get started by clicking on <b>Record</b> button": "<b>ರೆಕಾರ್ಡ್</b> ಬಟನ್ ಒತ್ತುವ ಮಾಡುವ ಮೂಲಕ ಪ್ರಾರಂಭಿಸಿ",
 	"Verify What They Say": "ಅವರ ಹೇಳಿಕೆಯನ್ನು  ಮೌಲ್ಯೀಕರಿಸಿ",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Top Languages": "ಉನ್ನತ ಭಾಷೆಗಳು",
 	"By hours of data contributed": "ಮಾಹಿತಿ ಕೊಡುಗೆಯಿಂದ ಸಮಯದೊಳಗೆ",
 	"By number of speakers": "ಭಾಷಣಕಾರರ ಸಂಖ್ಯೆಯಿಂದ",
 	"VIEW ALL DETAILS": "ಎಲ್ಲಾ ವಿವರಗಳನ್ನು ವೀಕ್ಷಿಸಿ",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "ನಾನು <a href=\"/terms-and-conditions\">ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು</a> ಓದಿದ್ದೇನೆ ಮತ್ತು ಒಪ್ಪುತ್ತೇನೆ",
 	"Show All": "ಎಲ್ಲ ತೋರಿಸು",
-	"Enter preferred username": "Enter preferred username",
+	"Enter preferred username": "ಆದ್ಯತೆಯ ಬಳಕೆದಾರರ ಹೆಸರನ್ನು ನಮೂದಿಸಿ",
 	"Select the language": "ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
 	"All Languages": "ಎಲ್ಲಾ ಭಾಷೆಗಳು",
 	"Data Last Updated": "ಕೊನೆಯದಾಗಿ ಮಾಹಿತಿ ನವೀಕರಿಸಲಾಗಿದ್ದು",
@@ -110,7 +110,7 @@
 	"State Wise distribution": "ರಾಜ್ಯವಾರು ವಿತರಣೆ",
 	"Age Group Distribution": "ವಯೋಮಾನ ವಿತರಣೆ",
 	"Instructions": "ಸೂಚನೆಗಳು",
-	"Play": "Play",
+	"Play": "ಚಾಲನೆ ಮಾಡಿ",
 	"Thank you for your enthusiasm to validate the voice samples": "ಧ್ವನಿ ಮಾದರಿಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ನಿಮ್ಮ ಉತ್ಸಾಹಕ್ಕೆ ಧನ್ಯವಾದಗಳು",
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ನಾವು ಇತ್ತೀಚೆಗೆ <span id=\"spn-validation-language\"></span> ಭಾಷೆಗಾಗಿ ಡೇಟಾ ಕೊಡುಗೆ ಪ್ರಯಾಣವನ್ನು ಪ್ರಾರಂಭಿಸಿದ್ದೇವೆ ಮತ್ತು ಶೀಘ್ರದಲ್ಲೇ ನಿಮ್ಮ ation ರ್ಜಿತಗೊಳಿಸುವಿಕೆಗಾಗಿ ಧ್ವನಿ ಮಾದರಿಗಳನ್ನು ಸಂಗ್ರಹಿಸಲಾಗುವುದು ಎಂದು ಭಾವಿಸುತ್ತೇವೆ.",
 	"Would you also like to contribute your voice?": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಸಹ ನೀವು ನೀಡಲು ಬಯಸುವಿರಾ?",
@@ -120,12 +120,17 @@
 	"total hours validated": "total hours validated",
 	"total hours contributed": "total hours contributed",
 	"Validate More": "ಮತ್ತಷ್ಟು ಮೌಲ್ಯೀಕರಿಸಿ",
-	"Validating Instructions": "Validating Instructions",
+	"Validating Instructions": "ಮೌಲ್ಯೀಕರಿಸಲಾದ ಸೂಚನೆಗಳು",
 	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗೆ ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇಲ್ಲ, ಅದಕ್ಕಾಗಿ ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
 	"EkStep Foundation": "ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಸಂಸ್ಥೆ",
 	"Username cannot be more than 12 characters": "ಬಳಕೆದಾರನ ಹೆಸರು 12 ಅಕ್ಷರಗಳಿಗಿಂತ ಹೆಚ್ಚು ಇರಬಾರದು",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ರೆಕಾರ್ಡಿಂಗ್‌ಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ನೀವು ನಮಗೆ ಸಹಾಯ ಮಾಡಿದ್ದೀ",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample"
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"Oops": "ಅಯ್ಯೋ",
+	"Page Not Found": "ಪುಟ ಗೋಚರಿಸುತ್ತಿಲ್ಲ",
+	"Looks like you have taken a wrong turn here": "ನೀವು ಇಲ್ಲಿ ತಪ್ಪು ತಿರುವು ಮಾಡಿರುವುದು ತೋರುತ್ತಿದೆ",
+	"Click Here": "ಇಲ್ಲಿ ಅನ್ನು ಒತ್ತಿ",
+	"to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು"
 }
