|Ramu| Add updating locale language on user contribution language selection

--- a/locales/as.json
+++ b/locales/as.json
@@ -142,5 +142,6 @@
 	"Page Not Found": "পেজটো বিচাৰি পোৱা নাই",
 	"Looks like you have taken a wrong turn here": "আপুনি ভুল দিশে গতি কৰা যেন লাগিছে",
 	"Click Here": "ক্লিক কৰক",
-	"to go back to home page": "পুণৰ আগৰ পেজলৈ ঘুৰি যাবলৈ ত"
+	"to go back to home page": "পুণৰ আগৰ পেজলৈ ঘুৰি যাবলৈ ত",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
