--- a/locales/en.json
+++ b/locales/en.json
@@ -159,5 +159,6 @@
 	"EkStep Foundation": "EkStep Foundation",
 	"Select the language": "Select the language",
 	"Data Last Updated": "Data Last Updated",
-	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?"
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
