--- a/locales/kn.json
+++ b/locales/kn.json
@@ -132,5 +132,6 @@
 	"Page Not Found": "ಪುಟ ಗೋಚರಿಸುತ್ತಿಲ್ಲ",
 	"Looks like you have taken a wrong turn here": "ನೀವು ಇಲ್ಲಿ ತಪ್ಪು ತಿರುವು ಮಾಡಿರುವುದು ತೋರುತ್ತಿದೆ",
 	"Click Here": "ಇಲ್ಲಿ ಅನ್ನು ಒತ್ತಿ",
-	"to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು"
+	"to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
