--- a/locales/mr.json
+++ b/locales/mr.json
@@ -147,5 +147,6 @@
 	"total hours contributed": "एकूण योगदान",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample"
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
