--- a/locales/or.json
+++ b/locales/or.json
@@ -145,5 +145,6 @@
 	"Quarterly": "ତ୍ର ar ମାସିକ |",
 	"Gender Contribution": "ଲିଙ୍ଗ ଅବଦାନ",
 	"State Wise distribution": "ରାଜ୍ୟ ୱାରି ଆବଣ୍ଟନ",
-	"Age Group Distribution": "ବୟସ ବର୍ଗ ଆବଣ୍ଟନ"
+	"Age Group Distribution": "ବୟସ ବର୍ଗ ଆବଣ୍ଟନ",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
