--- a/locales/pa.json
+++ b/locales/pa.json
@@ -142,5 +142,6 @@
 	"Page Not Found": "ਪੰਨਾ ਨਹੀਂ ਮਿਲਿਆ",
 	"Looks like you have taken a wrong turn here": "ਲੱਗਦਾ ਹੈ ਕਿ ਤੁਸੀਂ ਕਿਸੇ ਗਲਤ ਥਾਂ 'ਤੇ ਆ ਗਏ ਹੋ",
 	"Click Here": "ਕਲਿਕ ਕਰੋ",
-	"to go back to home page": "ਹੋਮ ਪੇਜ ਤੇ ਵਾਪਸ ਜਾਣ ਲਈ ਇੱਥੇ"
+	"to go back to home page": "ਹੋਮ ਪੇਜ ਤੇ ਵਾਪਸ ਜਾਣ ਲਈ ਇੱਥੇ",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
