--- a/locales/bn.json
+++ b/locales/bn.json
@@ -118,5 +118,6 @@
 	"Username cannot be more than 12 characters": "ব্যবহারকারীর নাম 12 টির বেশি অক্ষর হতে পারে না",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample"
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
