--- a/locales/gu.json
+++ b/locales/gu.json
@@ -150,5 +150,6 @@
 	"to go back to home page": "હોમ પેજ પર જવા માટે અહીં પર",
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "અમે <span id=\"spn-validation-language\"></span> ભાષા માટે તાજેતરમાં જ ડેટાનો ફાળો શરૂ કર્યો છે અને આશા રાખીએ છીએ કે જલદી જ વોઇસ સેમ્પલ્સ ભેગા કરવામાં આવશે",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "તમે અમને <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> સેકંડ માન્ય કરવામાં સહાય કરી છે",
-	"EkStep Foundation": "EkStep ફાઉન્ડેશન"
+	"EkStep Foundation": "EkStep ફાઉન્ડેશન",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
