--- a/locales/hi.json
+++ b/locales/hi.json
@@ -123,6 +123,5 @@
 	"We do not have any data for this language, would you like to contribute for it?": "हमारे पास इस भाषा के लिए कोई डेटा नहीं है, क्या आप इसके लिए योगदान देना चाहेंगे?",
 	"Username cannot be more than 12 characters": "यूज़रनेम 12 कैरेक्चर से अधिक नहीं हो सकता",
 	"EkStep Foundation": "एकस्टेप संगठन",
-	"min": "मिनट",
-	"hrs recorded in": "%s घंटे %s में रिकॉर्ड हुए"
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
