--- a/locales/ta.json
+++ b/locales/ta.json
@@ -103,5 +103,6 @@
 	"Help us by validating the voice samples that others have contributed": "Help us by validating the voice samples that others have contributed",
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "Select Your Preferred Language",
-	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:"
+	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
 }
