|Ramu| Fix languages that doesnot have locale

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -104,5 +104,5 @@
 	"Odia (Select languages)": "Odia (Select languages)",
 	"Select Your Preferred Language": "Select Your Preferred Language",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
-	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
+	"hrs recorded in": "%hours hrs recorded in %language"
 }
