--- a/locales/te.json
+++ b/locales/te.json
@@ -122,9 +122,9 @@
 	"VIEW ALL DETAILS": "VIEW ALL DETAILS",
 	"Select Age Group": "Select Age Group",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए",
 	"Show All": "Show All",
 	"Enter preferred username": "Enter preferred username",
 	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters",
-	"Select Mother Tongue": "Select Mother Tongue"
+	"Select Mother Tongue": "Select Mother Tongue",
+	"hrs recorded in": "%hours hrs recorded in %language"
 }
