|Ramu| Update dynamic JS translations

--- a/locales/as.json
+++ b/locales/as.json
@@ -143,5 +143,6 @@
 	"Looks like you have taken a wrong turn here": "আপুনি ভুল দিশে গতি কৰা যেন লাগিছে",
 	"Click Here": "ক্লিক কৰক",
 	"to go back to home page": "পুণৰ আগৰ পেজলৈ ঘুৰি যাবলৈ ত",
-	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
+	"hrs recorded in": "%hours ঘন্টাত %language ৰেকৰ্ড কৰক",
+	"hrs validated in": "%hours ঘন্টা %language ৰেকৰ্ড কৰক"
 }
