--- a/locales/hi.json
+++ b/locales/hi.json
@@ -123,5 +123,10 @@
 	"We do not have any data for this language, would you like to contribute for it?": "हमारे पास इस भाषा के लिए कोई डेटा नहीं है, क्या आप इसके लिए योगदान देना चाहेंगे?",
 	"Username cannot be more than 12 characters": "यूज़रनेम 12 कैरेक्चर से अधिक नहीं हो सकता",
 	"EkStep Foundation": "एकस्टेप संगठन",
-	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
+	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए",
+	"hrs validated in": "%hours घंटे %language में प्रमाणित हुए",
+	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices.Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices.Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.",
+	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group.The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group.The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.",
+	"Not You ? Change User": "Not You ? Change User",
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions < /a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions < /a>"
 }
