--- a/locales/kn.json
+++ b/locales/kn.json
@@ -133,5 +133,6 @@
 	"Looks like you have taken a wrong turn here": "ನೀವು ಇಲ್ಲಿ ತಪ್ಪು ತಿರುವು ಮಾಡಿರುವುದು ತೋರುತ್ತಿದೆ",
 	"Click Here": "ಇಲ್ಲಿ ಅನ್ನು ಒತ್ತಿ",
 	"to go back to home page": "ಮುಖಪುಟಕ್ಕೆ ಹಿಂತಿರುಗಲು",
-	"hrs recorded in": "%hours घंटे %language में रिकॉर्ड हुए"
+	"hrs recorded in": "%hours ಗಂಟೆಗಳನ್ನು %language ನಲ್ಲಿ ದಾಖಲಿಸಲಾಗಿದೆ",
+	"hrs validated in": "%hours ಗಂಟೆಗಳ %language ನಲ್ಲಿ ಮೌಲ್ಯೀಕರಿಸಲಾಗಿದೆ"
 }
