--- a/locales/gu.json
+++ b/locales/gu.json
@@ -152,5 +152,7 @@
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "તમે અમને <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> સેકંડ માન્ય કરવામાં સહાય કરી છે",
 	"EkStep Foundation": "EkStep ફાઉન્ડેશન",
 	"hrs recorded in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
-	"hrs validated in": "%language માં %hours અવાજો રેકોર્ડ કર્યા"
+	"hrs validated in": "%language માં %hours અવાજો રેકોર્ડ કર્યા",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "રેકોર્ડિંગ આપમેળે <span id=\"counter\"></span> સેકંડ પછી બંધ થઈ જશે"
+	
 }
