--- a/locales/ml.json
+++ b/locales/ml.json
@@ -131,5 +131,6 @@
 	"Username cannot be more than 12 characters": "യൂസർനെയിമിൽ 12 പ്രതീകങ്ങളിൽ കൂടുതൽ പാടില്ല",
 	"EkStep Foundation": "ഏക്സ്റ്റെപ്പ് ഫൗണ്ടേഷൻ",
 	"hrs recorded in": "%language ഭാഷയിൽ %hours എണ്ണം റെക്കോർഡ് ചെയ്തിട്ടുണ്ട്",
-	"hrs validated in": "%language ഭാഷയിൽ %hours എണ്ണം സാധൂകരിച്ചിട്ടുണ്ട്"
+	"hrs validated in": "%language ഭാഷയിൽ %hours എണ്ണം സാധൂകരിച്ചിട്ടുണ്ട്",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> സെക്കൻഡിനുശേഷം റെക്കോർഡിംഗ് യാന്ത്രികമായി നിർത്തും"
 }
