--- a/locales/mr.json
+++ b/locales/mr.json
@@ -149,5 +149,6 @@
 	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
 	"hrs recorded in": "%hours तास नोंदवले %language मध्ये",
-	"hrs validated in": "%hours तास सत्यापित केले %language मध्ये"
+	"hrs validated in": "%hours तास सत्यापित केले %language मध्ये",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> सेकंदानंतर रेकॉर्डिंग स्वयंचलितपणे थांबेल"
 }
