--- a/locales/or.json
+++ b/locales/or.json
@@ -147,5 +147,6 @@
 	"State Wise distribution": "ରାଜ୍ୟ ୱାରି ଆବଣ୍ଟନ",
 	"Age Group Distribution": "ବୟସ ବର୍ଗ ଆବଣ୍ଟନ",
 	"hrs recorded in": "%language ରେ %hours ଘଣ୍ଟା ରେକର୍ଡ଼ ହୋଇଛି",
-	"hrs validated in": "%language ରେ %hours ଘଣ୍ଟା ବୈଧ ହୋଇଛି"
+	"hrs validated in": "%language ରେ %hours ଘଣ୍ଟା ବୈଧ ହୋଇଛି",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> ସେକେଣ୍ଡ ପରେ ରେକର୍ଡିଂ ସ୍ୱୟଂଚାଳିତ ଭାବରେ ବନ୍ଦ ହୋଇଯିବ |"
 }
