--- a/locales/pa.json
+++ b/locales/pa.json
@@ -144,5 +144,6 @@
 	"Click Here": "ਕਲਿਕ ਕਰੋ",
 	"to go back to home page": "ਹੋਮ ਪੇਜ ਤੇ ਵਾਪਸ ਜਾਣ ਲਈ ਇੱਥੇ",
 	"hrs recorded in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਰਿਕਾਰਡ ਕੀਤੇ ਗਏ",
-	"hrs validated in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਪ੍ਰਮਾਣਿਤ ਕੀਤੇ ਗਏ"
+	"hrs validated in": "%language ਭਾਸ਼ਾ ਵਿੱਚ %hours ਘੰਟੇ ਪ੍ਰਮਾਣਿਤ ਕੀਤੇ ਗਏ",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "ਰਿਕਾਰਡਿੰਗ ਆਪਣੇ ਆਪ <span id=\"counter\"></span> ਸੈਕਿੰਡ ਬਾਅਦ ਬੰਦ ਹੋ ਜਾਵੇਗੀ"
 }
