--- a/locales/en.json
+++ b/locales/en.json
@@ -138,7 +138,7 @@
 	"By hours of data contributed": "By hours of data contributed",
 	"Select Age Group": "Select Age Group",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"Replay": "dsffasdf",
+	"Replay": "Replay",
 	"Select the language:": "Select the language:",
 	"All Languages": "All Languages",
 	"Data Last Updated:": "Data Last Updated:",
@@ -169,5 +169,6 @@
 	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
 	"Incorrect": "Incorrect",
 	"Correct": "Correct",
-	"Skip": "Skip"
+	"Skip": "Skip",
+	"Pause": "Pause"
 }
