|priyanshu| change Odia to ଓଡିଆ in ta.json te.json and or.json locale file

--- a/locales/ta.json
+++ b/locales/ta.json
@@ -8,7 +8,7 @@
 	"Kannada": "ಕನ್ನಡ",
 	"Malayalam": "മലയാളം",
 	"Marathi": "मराठी",
-	"Odia": "ଘୃଣା",
+	"Odia": "ଓଡିଆ",
 	"Punjabi": "ਪੰਜਾਬੀ",
 	"Tamil": "தமிழ்",
 	"Telugu": "తెలుగు",
