--- a/locales/or.json
+++ b/locales/or.json
@@ -1,5 +1,5 @@
 {
-	"Language": "ଘୃଣା",
+	"Language": "ଓଡିଆ",
 	"Vakyansh: The Home of Speech Recognition Essentials for Indian Languages": "Vakyansh: The Home of Speech Recognition Essentials for Indian Languages",
 	"Know More": "ଅଧିକ ଜାଣନ୍ତୁ",
 	"Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.": "Vakyansh aims to host the key essentials of Automatic Speech Recognition (ASR) technology, focusing on Indian languages. It is a resource that allows people to build applications that leverage speech recognition.",
