--- a/locales/te.json
+++ b/locales/te.json
@@ -8,7 +8,7 @@
 	"Kannada": "ಕನ್ನಡ",
 	"Malayalam": "മലയാളം",
 	"Marathi": "मराठी",
-	"Odia": "ଘୃଣା",
+	"Odia": "ଓଡିଆ",
 	"Punjabi": "ਪੰਜਾਬੀ",
 	"Tamil": "தமிழ்",
 	"Telugu": "తెలుగు",
