| Raunak | hindi translation bugs fixed

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -106,7 +106,7 @@
 	"We do not have any data for": "আমাদের কাছে কোনও ডেটা নেই",
 	"would you like to contribute for it?": "আপনি কি এর জন্য অবদান রাখতে চান?",
 	"Contribute Now": "এখন অবদান",
-	"hours validated": "বৈধতা ঘন্টা",
+	"hours validated": "ঘন্টা বৈধ",
 	"Progress Chart": "অগ্রগতির সময়রেখা",
 	"Monthly": "মাসিক",
 	"Quarterly": "ত্রৈমাসিক",
