--- a/locales/pa.json
+++ b/locales/pa.json
@@ -121,7 +121,7 @@
 	"Would you also like to contribute your voice?": "ਕੀ ਤੁਸੀਂ ਆਪਣੀ ਅਵਾਜ਼ ਅਤੇ ਸ਼ਬਦਾਂ ਰਾਹੀਂ ਵੀ ਯੋਗਦਾਨ ਪਾਉਣਾ ਚਾਹੋਗੇ?",
 	"Start Contributing": "ਯੋਗਦਾਨ ਪਾਉਣਾ ਸ਼ੁਰੂ ਕਰੋ",
 	"Thank you for validating!": "ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਲਈ ਤੁਹਾਡਾ ਧੰਨਵਾਦ!",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "ਤੁਸੀਂ ਸਾਡੀ <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ਰਿਕਾਰਡਿੰਗਾਂ ਨੂੰ ਪ੍ਰਮਾਣਿਤ ਕਰਨ ਵਿੱਚ ਸਹਾਇਤਾ ਕੀਤੀ ਹੈ",
 	"Validate More": "ਹੋਰ ਪ੍ਰਮਾਣਿਤ ਕਰੋ",
 	"Validating Instructions": "ਪ੍ਰਮਾਣੀਕਰਨ ਸੰਬੰਧੀ ਹਿਦਾਇਤਾਂ",
 	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
