--- a/locales/hi.json
+++ b/locales/hi.json
@@ -36,7 +36,7 @@
 	"Others": "अन्य",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "मैं सभी <a href=\"/terms-and-conditions\"> नियम और शर्तों </a>से सहमत हूं।",
 	"LET'S GO": "आगे बढ़ते हैं।",
-	"Hide details": "Hide details",
+	"Hide details": "जानकारी छिपाएँ",
 	"Select Your Preferred Language": "अपनी पसंद की भाषा का चुनाव करें",
 	"Select the language you wish to contribute/validate in:": "Select the language you wish to contribute/validate in:",
 	"Terms & Conditions": "नियम एवं शर्तें",
@@ -44,54 +44,55 @@
 	"An open data strategy will enable the various language communities, individuals and technologists, who are passionate about their language, to develop speech recognition applications, and integrate them in various domains for the good of the community.": "खुले स्रोत की रणनीति विभिन्न भाषा समुदायों, व्यक्तियों और प्रौद्योगिकीविदों को सक्षम करेगी, जो अपनी भाषा को लेकर जुनूनी हैं, उनके लिए भाषण मान्यता अनुप्रयोगों को विकसित करेगी और समुदाय की भलाई के लिए उन्हें विभिन्न डोमेन में एकीकृत करेगी।",
 	"Our multilingual DNA is still a missing piece in digital first strategy": "हमारा बहुभाषीय डीएनए डिजिटल प्रथम रणनीति का नामौजूद हिस्सा है",
 	"India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.": "भारत एक विस्तृत बहुभाषीय देश है, भारत की 90% आबादी अपनी शैक्षिक, सामाजिक और डिजिटल गतिविधियों के संचालन के लिए क्षेत्रीय भाषाओं पर निर्भर है।",
-	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "जिस प्रकार इंटरनेट सेवा इस्तेमाल करने वाले लोगों की संख्या बढ़ती जा रही है और वित्तीय, शैक्षिक और आर्थिक गतिविधियों के लिए डिजिटल मंच के इस्तेमाल की मांग है, ऐसे में भारतीय भाषाओं की शुरुआत के बारे में सोचने की ज़रूरत है।",
-	"Winning back our languages by introducing localization in our ecosystem": "हमारे पारिस्थितिकी तंत्र में स्थानीयकरण की शुरुआत से अपनी भाषाओं का विकास ",
-	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "भारतीय भाषाओं में विशेषज्ञता वाली वाक् पहचान तकनीक की आवश्यकता महसूस की जा रही है, जो एक उच्च सटीक रेखिका के बराबर हो और विविध भारतीय भाषाओं के उपयोगकर्ताओं की दैनिक भाषा और संचार कार्यों के करीब हो।",
-	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "वाक् पहचान तंत्र एक प्रौद्योगिकी है, जो वाक को वास्तविक लेख में परिवर्तित करती है। भारतीय भाषाओं के लिए शिक्षा, स्वास्थ्य सेवा और मीडिया जैसे विभिन्न क्षेत्रों में इस प्रकार के तंत्र में डिजिटल प्रथम तंत्र का आधार बनने की क्षमता है।",
-	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "विकसित किए जाने वाले प्रस्तावित उपकरण, उपयोगिताओं और तंत्र वाक्यांश के जन-संकुल स्रोत के माध्यम से खुले स्रोत के योगदान पर आधारित होंगे।",
-	"Crowd Sourcing & your contribution": "जन-संकुल स्रोत और आपका योगदान",
-	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "भाषण मान्यता \"यंत्र-अधिगम\" तकनीक पर निर्भर करती है, जिसके लिए आधार-सामाग्री के विशाल संग्रह की आवश्यकता होती है, जिसमें विविध भारतीय आवाज़ें और समरूपी सूत्र शामिल हों। वाक्यांश के ज़रिए, एकस्टेप भारतीय भाषा बोलने वाली भारतीय आवाज़ों का एक विविध खुले स्रोत का संग्रह बनाना चाहता है, जिसका उपयोग इस पहल और अन्य उद्देश्यों के लिए किया जा सके।",
-	"This is where you come in.": "इस क्रम में आपकी मदद की हमें आवश्यकता है। ",
-	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "एक दल के तौर पर, हम आपको आमंत्रण दे रहे हैं, हमारे साथ शामिल होकर इस पहल के लिए अपने कीमती समय में से केवल 30 मिनट का समय निकालकर अपनी आवाज़ का योगदान दें। इस क्रम में आपकी आवाज़ को रिकॉर्ड करके हमें बेहद खुशी होगी और इसीलिए, हमने अपनी वेबसाइट पर कई साधन तैयार किए हैं, ताकि आप इस वेबसाइट पर कई बार जा सकते हैं और वहीं से अपने कार्य को शुरू कर सकते हैं, जहां पर आपने इसे अधूरा छोड़ा था। ",
+	"As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indian languages first.": "जिस प्रकार इंटरनेट सेवा इस्तेमाल करने वाले लोगों की संख्या बढ़ती जा रही है और वित्तीय, शैक्षिक और आर्थिक गतिविधियों के लिए डिजिटल सेवा के इस्तेमाल की मांग है, ऐसे में भारतीय भाषाओं की शुरुआत के बारे में सोचने की ज़रूरत है।",
+	"Winning back our languages by introducing localization in our ecosystem": "पारिस्थितिकी तंत्र में स्थानीयकरण की शुरुआत से भारतीय भाषाओं का विकास",
+	"There is a felt need for a speech recognition technology that specializes in Indian languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.": "भारतीय भाषाओं में विशेषज्ञता वाली भाषा पहचान तकनीक की आवश्यकता महसूस की जा रही है, जो एक उच्च सटीक रेखिका के बराबर हो और विविध भारतीय भाषाओं के उपयोगकर्ताओं की दैनिक भाषा और संचार कार्यों के करीब हो।",
+	"Speech recognition is a technology that converts speech to real-time text. Such a model for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.": "भाषा की पहचान का मॉडल एक प्रौद्योगिकी है, जो भाषा को वास्तविक लिखित शब्दों में परिवर्तित करती है। भारतीय भाषाओं के लिए शिक्षा, स्वास्थ्य सेवा और मीडिया जैसे विभिन्न क्षेत्रों में इस प्रकार के मॉडल में डिजिटल प्रथम तंत्र का आधार बनने की क्षमता है।",
+	"The tools, utilities and models proposed to be developed will rely on open source contributions through Vakyansh crowd sourcing platform.": "विकसित किए जाने वाले प्रस्तावित उपकरण, उपयोगिताओं और मॉडल वाक्यांश के क्राउडफंडिंग स्रोत के माध्यम से खुले डाटा के योगदान पर आधारित होंगे।",
+	"Crowd Sourcing & your contribution": "क्राउडसोर्स और आपका योगदान",
+	"Speech recognition relies on \"machine-learning\" technology that requires huge collections of datasets that include diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open repository of Indian voice speaking Indian language which can be used for this initiative.": "भाषण मान्यता \"मशीन-लर्निंग\" तकनीक पर निर्भर करती है, जिसके लिए डाटा के विशाल संग्रह की आवश्यकता होती है, जिसमें विविध भारतीय आवाज़ें औरउसी की तरह के सूत्र शामिल हों। वाक्यांश के ज़रिए, <b>एकस्टेप</b> भारतीय भाषा बोलने वाली भारतीय आवाज़ों के एक विविध डाटा का संग्रह बनाना चाहता है, जिसका उपयोग इस पहल और अन्य उद्देश्यों के लिए किया जा सके।",
+	"This is where you come in.": "इस क्रम में आपकी मदद की हमें आवश्यकता है।",
+	"As a team, we are inviting you to join us and contribute upto 30 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.": "एक टीम के तौर पर, हम आपको आमंत्रण दे रहे हैं, हमारे साथ शामिल होकर इस पहल के लिए अपने कीमती समय में से केवल 30 मिनट का समय निकालकर अपनी आवाज़ का योगदान दें। इस क्रम में आपकी आवाज़ को रिकॉर्ड करके हमें बेहद खुशी होगी और इसीलिए, हमने अपनी वेबसाइट पर कई साधन तैयार किए हैं, ताकि आप इस वेबसाइट पर कई बार जा सकते हैं और वहीं से अपने कार्य को शुरू कर सकते हैं, जहां पर आपने इसे अधूरा छोड़ा था।",
 	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "आपके योगदान का हर पल एक बड़ा अंतर लाएगा और हमें अपने उद्देश्य के करीब पहुंचाएगा।",
 	"Select language": "भाषा का चुनाव करें",
-	"START RECORDING": "रिकॉर्ड शुरू करेंं",
-	"ABOUT THE ORGANISATION": "संगठन के बारे में ",
-	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप संगठन सभी भागीदारों को एक साथ लाता है और बड़े पैमाने पर जटिल सामाजिक समस्याओं को हल करने के लिए खुले बुनियादी ढाँचे, उपकरण और रूपरेखा का निर्माण करता है। हम खुले स्रोत के डिजिटल बुनियादी ढांचे का लाभ उठाते हुए ऐसा करते हैं, जिसे हमने सनबर्ड नाम दिया है और सोसिएटल प्लेटफार्म एप्रोच के साथ हम काम करते हैं। ",
-	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप एक गैर-लाभकारी संगठन है, जिसकी स्थापना रोहिणी, नंदन निलेकनी और शंकर मारुवाड़ा ने की है। ",
+	"START RECORDING": "रिकॉर्डिंग शुरू करें",
+	"ABOUT THE ORGANISATION": "संगठन के बारे में",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "एकस्टेप संगठन सभी भागीदारों को एक साथ लाता है और बड़े पैमाने पर जटिल सामाजिक समस्याओं को हल करने के लिए खुले बुनियादी ढाँचे, उपकरण और रूपरेखा का निर्माण करता है। हम खुले स्रोत के डिजिटल बुनियादी ढांचे का लाभ उठाते हुए ऐसा करते हैं, जिसे हमने सनबर्ड नाम दिया है और सोसिएटल प्लेटफार्म एप्रोच के साथ हम काम करते हैं।",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "एकस्टेप एक गैर-लाभकारी संगठन है, जिसकी स्थापना रोहिणी, नंदन निलेकनी और शंकर मारुवाड़ा ने की है।",
 	"Let's get started!": "चलिए शुरू करते हैं",
 	"SKIP": "छोड़ें",
 	"STOP RECORDING": "रिकॉर्ड करना रोकें",
 	"Audio recording is too small. Please Re-record": "ऑटो रिकॉर्डिंग छोटी थी, कृपया फिर से रिकॉर्ड करें",
 	"RE-RECORD": "फिर से रिकॉर्ड करें",
 	"NEXT": "अगला",
-	"away from reaching your goal!": "away from reaching your goal!",
+	"away from reaching your goal!": "आप अपने लक्ष्य से दूर हैं!",
 	"Recording Instructions": "रिकॉर्ड के निर्देश",
 	"Please test your <b>microphone</b>": "कृपया अपना <b>माइक्रोफोन</b> चेक करें",
 	"Please test your <b>speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें",
-	"Ensure there is <b>no background noise</b>": "सुनिश्चित करें कि <b>कोई शोर न हो</b>",
-	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रिकॉर्डिंग से पहले, दिए गए पाठ को <b>जोर से पढ़कर</b> सहज हो जाएं",
-	"Get started by clicking on <b>Record</b> button": "<b>रिकॉर्ड</b> बटन को दबाकर शुरू करें",
+	"Ensure there is <b>no background noise</b>": "सुनिश्चित करें कि <b>आपके आस-पास कोई शोर-शराबा न हो</b>",
+	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "रिकॉर्डिंग से पहले, दिए गए <b>संदेश को पढ़कर</b> प्रैक्टिस कर लें",
+	"Get started by clicking on <b>Record</b> button": "<b>रिकॉर्ड</b> बटन को दबाकर रिकॉर्डिंग शुरू करें",
 	"START": "शुरू",
 	"Error!!!": "एरर!!!",
-	"An unexpected error occured while processing your request. Please try after some time.": "आपके अनुरोध को संसाधित करते समय एक अप्रत्याशित त्रुटि हुई। कृपया कुछ देर बाद प्रयास करें।",
-	"Close": "बंद",
+	"An unexpected error occured while processing your request. Please try after some time.": "आपके अनुरोध को प्रोसेस करते समय एक अनचाही गलती हुई। कृपया कुछ देर बाद दोबारा प्रयास करें।",
+	"Close": "बंद करें",
 	"Thank you for contributing!": "आपके योगदान के लिए शुक्रिया!",
 	"Your contribution has got us <b><span id=\"user-contribution\">0 seconds</span></b> closer to our goal!!!": "आपके योगदान के कारण हम अपने लक्ष्य के कुछ <b><span id=\"user-contribution\">सेकेंड</span></b> और करीब पहुंच गए हैं!!!",
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
-	"We know you can do more!": "हम जानते हैं कि आप और भी कर सकते हैं!",
+	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "आपकी आवाज़ का 30 से 45 मिनट के योगदान से वाक्यांश विविध  आवाज़ों के विशाल आधार-सामाग्री संग्रह बना सकता है।",
+	"We know you can do more!": "हम जानते हैं कि आप और भी अधिक कर सकते हैं!",
 	"Contribute More": "अधिक योगदान दें।",
-	"Share it with your friends and family": "अपने परिवार और दोस्तों के साथ साझा करें",
-	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने के लिए वापस आएं",
+	"Share it with your friends and family": "अपने परिवार और दोस्तों के साथ शेयर करें",
+	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने<br />के लिए वापस आएं",
 	"Terms and Conditions": "नियम एवं शर्तें",
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
-	"Instructions": "Instructions",
+	"Instructions": "निर्देश",
 	"Play": "प्ले करें",
 	"Thank you for your enthusiasm to validate the voice samples": "आवाज के नमूनों को मान्य करने के लिए आपके उत्साह के लिए धन्यवाद",
 	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "हमने हाल ही में <span id=\"spn-validation-language\"></span> भाषा के लिए डेटा योगदान यात्रा शुरू की है और आशा करते हैं कि बहुत जल्द आपकी मान्यता के लिए आवाज के नमूने एकत्र किए जाएंगे।",
 	"Would you also like to contribute your voice?": "क्या आप भी अपनी आवाज़ देना चाहेंगे?",
-	"Start Contributing": "योगदान करें",
+	"Start Contributing": "योगदान की शुरुआत करें",
 	"Thank you for validating!": "प्रमाणित करने के लिए शुक्रिया!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "आपने हमें दिए गए  <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> में से <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "आपने <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
@@ -103,21 +104,21 @@
 	"All Languages": "सभी भाषाएं",
 	"Contribute Now": "योगदान करें",
 	"hours validated": "प्रमाणित घंटे",
-	"Progress Chart": "प्रगति समयरेखा",
+	"Progress Chart": "प्रगति टाइमलाइन",
 	"Monthly": "मासिक",
 	"Quarterly": "त्रैमासिक",
-	"Gender Contribution": "आयु समूह का योगदान",
-	"State Wise distribution": "राज्यवार वितरण",
-	"Age Group Distribution": "आयु समूह वितरण",
-	"Oops": "Oops",
+	"Gender Contribution": "लिंग का योगदान",
+	"State Wise distribution": "स्टेट वाइज़ वितरण",
+	"Age Group Distribution": "ऐज ग्रुप का वितरण",
+	"Oops": "ऊप्स",
 	"Page Not Found": "पेज नहीं मिल रहा",
 	"Looks like you have taken a wrong turn here": "लगता है आपने गलत तरीका चुन लिया है",
 	"Click Here": "यहाँ क्लिक करें",
 	"to go back to home page": "अपने होम पेज पर जाने के लिए",
 	"Show All": "अन्य भाषाएं",
-	"Enter preferred username": "पसंदीदा उपयोगकर्ता नाम दर्ज करें",
+	"Enter preferred username": "अपनी पसंद का यूज़रनेम डालें",
 	"Select the language": "भाषा का चयन करें",
-	"Data Last Updated": "अंतिम बार आधार-सामाग्री अपडेट की गई",
+	"Data Last Updated": "अंतिम बार डाटा अपडेट हुआ",
 	"We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?": "हमारे पास <span id=\"languageSelected\"></span> के लिए कोई डेटा नहीं है क्या आप इसके लिए योगदान करना चाहेंगे?",
 	"We do not have any data for this language, would you like to contribute for it?": "हमारे पास इस भाषा के लिए कोई डेटा नहीं है, क्या आप इसके लिए योगदान देना चाहेंगे?",
 	"Username cannot be more than 12 characters": "यूज़रनेम 12 कैरेक्चर से अधिक नहीं हो सकता",
